# fidget-spinner

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/fidget_spinner/: __init__.py  __main__.py  extension.pyi  ui.py
src/: lib.rs
