[project]
dependencies = ["neuromorphic-drivers==0.16.1", "PySide6==6.10.0", "scipy==1.16.3"]
name = "fidget_spinner"
readme = "README.md"
requires-python = ">=3.9"
version = "1.0.0"

[build-system]
build-backend = "maturin"
requires = ["maturin==1.9.0"]

[project.scripts]
fidget-spinner = "fidget_spinner:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "fidget_spinner.extension"
python-source = "python"

[tool.pyright]
exclude = ["**/__pycache__", "**/.*", "src"]
executionEnvironments = [{root = ".", venv = ".venv"}]
typeCheckingMode = "basic"

[tool.isort]
extend_skip = ["src"]
profile = "black"
sort_reexports = true

[tool.black]
extend-exclude = "src"
